[package]
name = "subspace-explorer"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A TUI client for exploring the Subspace blockchain"
license = "MIT OR Apache-2.0"

[lib]
name = "subspace_explorer"
path = "src/lib.rs"

[[bin]]
name = "subspace-explorer"
path = "src/main.rs"

[dependencies]
# TUI
ratatui = { version = "0.26.0", features = ["crossterm"] }
crossterm = { version = "0.27.0", features = ["event-stream"] }
tokio = { version = "1.37.0", features = ["full", "rt-multi-thread", "time"] }
futures = "0.3.30"

# Substrate/Subspace
subxt = { version = "0.34.0", features = ["jsonrpsee", "substrate-compat"] }
subxt-metadata = "0.42.1"

# Utilities
anyhow = "1.0.81"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
log = "0.4.21"
pretty_env_logger = "0.5.0"
chrono = { version = "0.4.35", features = ["serde", "clock"] }
thiserror = "1.0.57"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
rand = "0.8"
hex = "0.4"

[dev-dependencies]
# Testing
rstest = "0.18.2"
mockall = "0.12.1"
tempfile = "3.10.0"
serial_test = "2.0.0"
assert_matches = "1.5.0"
insta = { version = "1.38.0", features = ["yaml"] }

[features]
default = ["substrate"]
substrate = []
