[workspace.package]
license = "MIT-0"
authors = ["ModNet Team <https://github.com/mod-net>"]
homepage = "https://github.com/mod-net"
repository = "https://github.com/mod-net/chain.git"
edition = "2021"

[workspace]
members = [
    "node",
    "pallets/modules",
    "runtime",
]
resolver = "2"

[workspace.dependencies]
modnet-runtime = { path = "./runtime", default-features = false }
pallet-modules = { path = "./pallets/modules", default-features = false }
clap = { version = "4.5.13" }
frame-benchmarking-cli = { version = "49.1.0", default-features = false }
frame-metadata-hash-extension = { version = "0.9.0", default-features = false }
frame-system = { version = "41.0.0", default-features = false }
futures = { version = "0.3.31" }
jsonrpsee = { version = "0.24.3" }
pallet-transaction-payment = { version = "41.0.0", default-features = false }
pallet-transaction-payment-rpc = { version = "44.0.0", default-features = false }
sc-basic-authorship = { version = "0.50.0", default-features = false }
sc-cli = { version = "0.53.1", default-features = false }
sc-client-api = { version = "40.0.0", default-features = false }
sc-consensus = { version = "0.50.0", default-features = false }
sc-consensus-aura = { version = "0.51.0", default-features = false }
sc-consensus-grandpa = { version = "0.36.0", default-features = false }
sc-executor = { version = "0.43.0", default-features = false }
sc-network = { version = "0.51.1", default-features = false }
sc-offchain = { version = "46.0.0", default-features = false }
sc-service = { version = "0.52.0", default-features = false }
sc-telemetry = { version = "29.0.0", default-features = false }
sc-transaction-pool = { version = "40.1.0", default-features = false }
sc-transaction-pool-api = { version = "40.0.0", default-features = false }
sp-api = { version = "37.0.0", default-features = false }
sp-block-builder = { version = "37.0.0", default-features = false }
sp-blockchain = { version = "40.0.0", default-features = false }
sp-consensus-aura = { version = "0.43.0", default-features = false }
sp-core = { version = "37.0.0", default-features = false }
sp-genesis-builder = { version = "0.18.0", default-features = false }
sp-inherents = { version = "37.0.0", default-features = false }
sp-io = { version = "41.0.1", default-features = false }
sp-keyring = { version = "42.0.0", default-features = false }
sp-runtime = { version = "42.0.0", default-features = false }
sp-timestamp = { version = "37.0.0", default-features = false }
sp-std = { version = "14.0.0", default-features = false }
substrate-frame-rpc-system = { version = "45.0.0", default-features = false }
substrate-build-script-utils = { version = "11.0.0", default-features = false }
codec = { version = "3.7.4", default-features = false, package = "parity-scale-codec" }
frame-benchmarking = { version = "41.0.1", default-features = false }
frame-executive = { version = "41.0.0", default-features = false }
frame-support = { version = "41.0.0", default-features = false }
frame-system-benchmarking = { version = "41.0.0", default-features = false }
frame-system-rpc-runtime-api = { version = "37.0.0", default-features = false }
frame-try-runtime = { version = "0.47.0", default-features = false }
pallet-aura = { version = "40.0.0", default-features = false }
pallet-balances = { version = "42.0.0", default-features = false }
pallet-grandpa = { version = "41.0.0", default-features = false }
pallet-sudo = { version = "41.0.0", default-features = false }
pallet-timestamp = { version = "40.0.0", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { version = "41.0.0", default-features = false }
scale-info = { version = "2.11.6", default-features = false }
serde_json = { version = "1.0.132", default-features = false }
sp-consensus-grandpa = { version = "24.0.0", default-features = false }
sp-offchain = { version = "37.0.0", default-features = false }
sp-session = { version = "39.0.0", default-features = false }
sp-storage = { version = "22.0.0", default-features = false }
sp-transaction-pool = { version = "37.0.0", default-features = false }
sp-version = { version = "40.0.0", default-features = false }
substrate-wasm-builder = { version = "27.0.0", default-features = false }
pallet-staking = { version = "41.0.0", default-features = false }

[profile.release]
opt-level = 3
panic = "unwind"

[profile.production]
codegen-units = 1
inherits = "release"
lto = true

